--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
+  font-size: 15px;
   min-height: 100vh;
-  background-color: lightslategrey;
+  background-color: rgb(40, 40, 40);
   /* margin: 10px 10px 10px 10px;*/
 }
 
@@ -30,17 +30,18 @@ body {
 }
 
 .grid-item-header {
-  background-color: rgb(68, 82, 95);
+  background-color: rgb(7, 153, 250);
   color: whitesmoke;
+  font-weight: bold;
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 .grid-item {
-  background-color: rgba(140, 155, 170, 50%);
+  background-color: rgba(140, 155, 170, 5%);
   color: whitesmoke;
   width: 100%;
   height: 100%;
@@ -62,15 +63,19 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 3fr repeat(5, 1fr);
+  grid-template-columns: 2fr repeat(5, 1fr);
   grid-template-rows: 50px;
-  gap: 5px;
+  gap: 4px;
   justify-items: center;
   align-items: center;
-  padding: 5px 5px 0px 5px;
+  padding: 4px 13px 0px 13px;
   width: 100%;
 }
 
 .sticky {
   position: fixed;
+}
+
+.content {
+  padding-top: 60px;
 }
