--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
   min-height: 100vh;
   background-color: rgb(40, 40, 40);
-  /* margin: 10px 10px 10px 10px;*/
+  padding-top: 13px;
+  user-select: none;
 }
 
 .navbar {
@@ -32,7 +33,8 @@ body {
 .grid-item-header {
   background-color: rgb(7, 153, 250);
   color: whitesmoke;
-  font-weight: bold;
+  font-size: 209;
+  font-weight: 700;
   width: 100%;
   height: 100%;
   display: grid;
@@ -42,7 +44,7 @@ body {
 
 .grid-item {
   background-color: rgba(140, 155, 170, 5%);
-  color: whitesmoke;
+  color: rgb(211, 211, 211);
   width: 100%;
   height: 100%;
   display: grid;
