--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ body {
   background-color: rgba(7, 153, 250, 35%);
 }
 
+.grid-grupo {
+  background-color: rgba(7, 153, 250, 35%);
+}
+
 hr {
   width: 90%;
   height: 2px;
